# UntitledXDGBasedir

./: .gitignore  CMakeLists.txt  CUXDGBaseDir.cpp  CUXDGBaseDir.h  Common.h  README.md  UXDGBaseDir.cpp  UXDGBaseDir.hpp  UntitledXDGBasedir.pc.in  ci.sh
.github/workflows/: release.yaml
